multi boards adaptations to board Id not 0