@@ -15,12 +15,9 @@
 */
 package megamek.server;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.HashMap;
-import java.util.Hashtable;
 import java.util.List;
 import java.util.Map;
 import java.util.Vector;
@@ -49,7 +46,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
         game = gameManager.getGame();
         this.vPhaseReport = vPhaseReport;
         removeSmokeTerrainFromHexes();
-        resolveFire();
+        game.getBoardIds().forEach(this::resolveFire);
         reapplySmokeTerrain();
         this.vPhaseReport = null;
     }
@@ -61,8 +58,8 @@ public class FireProcessor extends DynamicTerrainProcessor {
      * longer determined by level but is rather a characteristic of the hex.
      * Level now denotes standard and inferno fires.
      */
-    private void resolveFire() {
-        Board board = game.getBoard();
+    private void resolveFire(int boardId) {
+        Board board = game.getBoard(boardId);
         int width = board.getWidth();
         int height = board.getHeight();
         WindDirection windDirection = game.getPlanetaryConditions().getWindDirection();
@@ -73,12 +70,12 @@ public class FireProcessor extends DynamicTerrainProcessor {
 
         // process smoke FIRST, before any fires spread or
         // smoke is produced.
-        resolveSmoke();
+        resolveSmoke(boardId);
 
         // Cycle through all buildings, checking for fire.
         // ASSUMPTION: buildings don't lose 2 CF on the turn a fire starts.
         // ASSUMPTION: multi-hex buildings lose 2 CF in each burning hex
-        Enumeration<Building> buildings = game.getBoard().getBuildings();
+        Enumeration<Building> buildings = board.getBuildings();
         while (buildings.hasMoreElements()) {
             Building bldg = buildings.nextElement();
             Enumeration<Coords> bldgCoords = bldg.getCoords();
@@ -132,7 +129,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
                         if (burnReports != null) {
                             vPhaseReport.addAll(burnReports);
                         }
-                        spreadFire(currentXCoord, currentYCoord, windDirection, windStrength);
+                        spreadFire(board, currentXCoord, currentYCoord, windDirection, windStrength);
                     }
                 }
             }
@@ -147,7 +144,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
                 Hex currentHex = board.getHex(currentXCoord, currentYCoord);
 
                 if (currentHex.containsTerrain(Terrains.FIRE)) {
-                    Building bldg = game.getBoard().getBuildingAt(currentCoords);
+                    Building bldg = board.getBuildingAt(currentCoords);
                     // Was the fire started this turn?
                     if (currentHex.getFireTurn() == 0) {
                         // Report fire started this round
@@ -160,7 +157,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
                     }
 
                     // Check for any explosions
-                    gameManager.checkExplodeIndustrialZone(currentCoords, vPhaseReport);
+                    gameManager.checkExplodeIndustrialZone(currentCoords, boardId, vPhaseReport);
 
                     // Add smoke, unless tornado or optional rules
                     boolean containsForest = (currentHex.containsTerrain(Terrains.WOODS)
@@ -177,7 +174,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
                         smokeList.add(currentCoords.translated(windDirection.rotateClockwise().ordinal()));
                         smokeList.add(currentCoords.translated(windDirection.rotateCounterClockwise().ordinal()));
 
-                        gameManager.addSmoke(smokeList, windDirection.ordinal(), bInferno);
+                        gameManager.addSmoke(smokeList, board, bInferno);
                         board.initializeAround(currentXCoord, currentYCoord);
                     }
 
@@ -212,7 +209,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
     /**
      * Spreads the fire around the specified coordinates.
      */
-    public void spreadFire(int x, int y, WindDirection windDir, Wind windStr) {
+    public void spreadFire(Board board, int x, int y, WindDirection windDir, Wind windStr) {
         Coords src = new Coords(x, y);
         Coords nextCoords = src.translated(windDir.ordinal());
 
@@ -223,7 +220,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
         // to
         // a level 1 building at base level 0, for example.
 
-        final int curHeight = game.getBoard().getHex(src).ceiling();
+        final int curHeight = board.getHex(src).ceiling();
 
         TargetRoll directroll = new TargetRoll(9, "spread downwind");
         TargetRoll obliqueroll = new TargetRoll(11, "spread 60 degrees to downwind");
@@ -237,25 +234,25 @@ public class FireProcessor extends DynamicTerrainProcessor {
             directroll.addModifier(-2, "strong gale+");
         }
 
-        spreadFire(src, nextCoords, directroll, curHeight);
+        spreadFire(board, src, nextCoords, directroll, curHeight);
 
         // Spread to the next hex downwind on a 12 if the first hex wasn't
         // burning...
         // unless a higher hex intervenes
-        Hex nextHex = game.getBoard().getHex(nextCoords);
-        Hex jumpHex = game.getBoard().getHex(nextCoords.translated(windDir.ordinal()));
+        Hex nextHex = board.getHex(nextCoords);
+        Hex jumpHex = board.getHex(nextCoords.translated(windDir.ordinal()));
         if ((nextHex != null) && (jumpHex != null) && !(nextHex.containsTerrain(Terrains.FIRE))
                 && ((curHeight >= nextHex.ceiling()) || (jumpHex.ceiling() >= nextHex.ceiling()))) {
             // we've already gone one step in the wind direction, now go another
             directroll.addModifier(3, "crossing non-burning hex");
-            spreadFire(src, nextCoords.translated(windDir.ordinal()), directroll, curHeight);
+            spreadFire(board, src, nextCoords.translated(windDir.ordinal()), directroll, curHeight);
         }
 
         // spread fire 60 degrees clockwise....
-        spreadFire(src, src.translated(windDir.rotateClockwise().ordinal()), obliqueroll, curHeight);
+        spreadFire(board, src, src.translated(windDir.rotateClockwise().ordinal()), obliqueroll, curHeight);
 
         // spread fire 60 degrees counterclockwise
-        spreadFire(src, src.translated(windDir.rotateCounterClockwise().ordinal()), obliqueroll, curHeight);
+        spreadFire(board, src, src.translated(windDir.rotateCounterClockwise().ordinal()), obliqueroll, curHeight);
     }
 
     /**
@@ -267,9 +264,9 @@ public class FireProcessor extends DynamicTerrainProcessor {
      * @param roll   the target number for roll for fire to spread
      * @param height the height of the origin hex
      */
-    public void spreadFire(final Coords origin, final Coords coords, final TargetRoll roll,
-            final int height) {
-        Hex hex = game.getBoard().getHex(coords);
+    public void spreadFire(Board board, Coords origin, Coords coords, final TargetRoll roll,
+            int height) {
+        Hex hex = board.getHex(coords);
         if ((hex == null) || (Math.abs(hex.ceiling() - height) > 4)) {
             // Don't attempt to spread fire off the board or for large differences in height
             return;
@@ -281,8 +278,8 @@ public class FireProcessor extends DynamicTerrainProcessor {
     }
 
     /** Processes smoke drift and dissipation. */
-    private void resolveSmoke() {
-        final Board board = game.getBoard();
+    private void resolveSmoke(int boardId) {
+        final Board board = game.getBoard(boardId);
         final WindDirection windDir = game.getPlanetaryConditions().getWindDirection();
         PlanetaryConditions conditions = game.getPlanetaryConditions();
         Wind windStr = game.getPlanetaryConditions().getWind();
@@ -302,7 +299,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
 
             final ArrayList<Coords> replacementHexes = new ArrayList<>();
             for (Coords currentCoords : cloud.getCoordsList()) {
-                Coords smokeCoords = driftAddSmoke(currentCoords, windDir, windStr);
+                Coords smokeCoords = driftAddSmoke(currentCoords, board, windDir, windStr);
                 if (smokeCoords == null) {
                     // Smoke has Dissipated by moving into a hex with a greater than 4 elevation
                     // drop.
@@ -342,13 +339,13 @@ public class FireProcessor extends DynamicTerrainProcessor {
     }
 
     /**
-     * (Re-)Applies smoke (Terrains.SMOKE) to all hexes of all smoke clouds and
-     * marks the hexes for client update.
+     * (Re-)Applies smoke (Terrains.SMOKE) to all hexes of all smoke clouds on all boards and marks the hexes for
+     * client update.
      */
     private void reapplySmokeTerrain() {
         for (SmokeCloud cloud : game.getSmokeCloudList()) {
             for (Coords coords : cloud.getCoordsList()) {
-                Hex smokeHex = gameManager.getGame().getBoard().getHex(coords);
+                Hex smokeHex = gameManager.getGame().getBoard(cloud.getBoardId()).getHex(coords);
                 if (smokeHex != null) {
                     if (smokeHex.containsTerrain(Terrains.SMOKE)) {
                         if (smokeHex.terrainLevel(Terrains.SMOKE) == SmokeCloud.SMOKE_LIGHT) {
@@ -370,14 +367,16 @@ public class FireProcessor extends DynamicTerrainProcessor {
      */
     private List<SmokeCloud> preExistingSmokeClouds() {
         final int currentRound = gameManager.getGame().getRoundCount();
-        return gameManager.getSmokeCloudList().stream().filter(cloud -> currentRound != cloud.getRoundOfGeneration())
-                .collect(toList());
+        return gameManager.getSmokeCloudList().stream()
+                     .filter(cloud -> currentRound != cloud.getRoundOfGeneration())
+                     .toList();
     }
 
-    /** Removes smoke (Terrains.SMOKE) from all hexes of all smoke clouds. */
+    /** Removes smoke (Terrains.SMOKE) from all hexes of all smoke clouds on all boards. */
     private void removeSmokeTerrainFromHexes() {
         for (SmokeCloud cloud : game.getSmokeCloudList()) {
-            game.getBoard().getHexes(cloud.getCoordsList()).forEach(h -> h.removeTerrain(Terrains.SMOKE));
+            game.getBoard(cloud.getBoardId()).getHexes(cloud.getCoordsList())
+                  .forEach(h -> h.removeTerrain(Terrains.SMOKE));
         }
     }
 
@@ -391,31 +390,26 @@ public class FireProcessor extends DynamicTerrainProcessor {
      *         dissipates while on the
      *         board.
      */
-    public @Nullable Coords driftAddSmoke(final Coords source, final WindDirection windDirection,
+    public @Nullable Coords driftAddSmoke(final Coords source, Board board, final WindDirection windDirection,
             final Wind windStrength) {
-        return driftAddSmoke(source, windDirection, windStrength, 0);
+        return driftAddSmoke(source, board, windDirection, windStrength, 0);
     }
 
     /**
-     * Smoke cannot climb more than 4 hexes if the next hex is more than 4 in
-     * elevation then the
-     * smoke will try to go right. If it cannot go right it'll try to go left. If it
-     * cannot go left
-     * it'll stay put.
+     * Smoke cannot climb more than 4 hexes if the next hex is more than 4 in elevation then the smoke will try to go
+     * right. If it cannot go right it'll try to go left. If it cannot go left it'll stay put.
      *
      * @param src              the source coordinates
      * @param windDir          the wind's direction
      * @param windStr          the wind's strength
-     * @param directionChanges How many times the smoke has tried to change
-     *                         directions to get around an obstacle.
-     * @return the coordinates where the smoke has drifted to, or null if it
-     *         dissipates while on the
-     *         board.
+     * @param directionChanges How many times the smoke has tried to change directions to get around an obstacle.
+     *
+     * @return the coordinates where the smoke has drifted to, or null if it dissipates while on the board.
      */
-    public @Nullable Coords driftAddSmoke(final Coords src, final WindDirection windDir, final Wind windStr,
+    public @Nullable Coords driftAddSmoke(final Coords src, Board board, final WindDirection windDir,
+          final Wind windStr,
             final int directionChanges) {
         Coords nextCoords = src.translated(windDir.ordinal());
-        Board board = game.getBoard();
 
         // if the wind conditions are calm, then don't drift it
         if (windStr.isCalm()) {
@@ -455,10 +449,10 @@ public class FireProcessor extends DynamicTerrainProcessor {
         if ((hexElevation - nextElevation) < -4) {
             // Try Right
             if (directionChanges == 0) {
-                return driftAddSmoke(src, windDir.rotateClockwise(), windStr, directionChanges + 1);
+                return driftAddSmoke(src, board, windDir.rotateClockwise(), windStr, directionChanges + 1);
             } else if (directionChanges == 1) {
                 // Try Left
-                return driftAddSmoke(src, windDir.rotateCounterClockwise(), windStr, directionChanges + 1);
+                return driftAddSmoke(src, board, windDir.rotateCounterClockwise(), windStr, directionChanges + 1);
             } else {
                 // Stay put
                 return src;
@@ -467,7 +461,7 @@ public class FireProcessor extends DynamicTerrainProcessor {
 
         // stronger wind causes smoke to drift farther
         if (windStr.isStrongerThan(Wind.MOD_GALE)) {
-            return driftAddSmoke(nextCoords, windDir, windStr.lowerWind());
+            return driftAddSmoke(nextCoords, board, windDir, windStr.lowerWind());
         }
 
         return nextCoords;
